<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical" android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:focusable="true"
                  android:focusableInTouchMode="true"
        >

        <include layout="@layout/head_title"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Status"
                android:textAllCaps="false"
                style="?android:attr/editTextStyle"
                android:layout_weight="1"

                />


            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="tenure"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:id="@+id/emp_status_spinner"
                android:layout_weight="10"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jod_content"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:hint="@string/jod"
            style="?android:attr/editTextStyle"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jod_date"
            style="?android:attr/editTextStyle"
            android:layout_weight="2"
            android:drawableRight="@drawable/drop_down"/>

        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/montly_income"
                android:singleLine="true"
                android:hint="Monthly Income"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                style="@style/Base.Widget.AppCompat.EditText"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employer"
            android:singleLine="true"
            android:hint="@string/emp"
            android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_person"
            android:singleLine="true"
            android:hint="@string/emp_contact"
            android:imeOptions="actionDone"
            style="@style/Base.Widget.AppCompat.EditText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emp_phone"
            android:singleLine="true"
            android:hint="@string/emp_phone"
            android:inputType="phone"
            android:imeOptions="actionDone"
            />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_email"
                android:singleLine="true"
                android:hint="@string/emp_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/next_previous"/>
    </LinearLayout>

</ScrollView>