<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <include layout="@layout/head_title" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/photo"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:background="#00eeeeee"
                android:id="@+id/photo_icon"
                android:layout_gravity="bottom|right"/>

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name"
            android:singleLine="true"
            android:hint="@string/first_name"
            android:title="First Name"
            android:imeOptions="actionDone"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name"
                android:singleLine="true"
                android:hint="@string/last_name"
                android:title="Last Name"
                android:imeOptions="actionDone"
            />

        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="@color/colorAccent"
            android:text="Sex"
            android:textStyle="bold"
            android:textAllCaps="false"
            style="?android:attr/listSeparatorTextViewStyle"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="Male"
                android:buttonTint="@android:color/white"
                android:id="@+id/male"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:buttonTint="@android:color/white"
                android:text="Female"
                android:id="@+id/female"/>

        </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/dob"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            style="?android:attr/listSeparatorTextViewStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dob"
            android:singleLine="true"
            android:inputType="none"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:background="#00ffffff"
            android:drawableRight="@drawable/drop_down"/>

        </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_bright"/>

        <include layout="@layout/next_previous"/>
    </LinearLayout>

</ScrollView>